syntax = "proto3";

package cmdpb;
option go_package = ".;cmdpb";

message DefaultRequest{
    int32 reqid = 1;
}

message DefaultRequestMsg{
    string message = 1;
}


message DefaultResp{
    string message = 1;
}

message DefaultRequestIDMsg{
    int32 reqid = 1;
    string message = 2;
}


