syntax = "proto3";

package cmdpb;
option go_package = ".;cmdpb";

import "default.proto";

message StringOP{
    int32 op = 1;
    repeated string param = 2;
}

service stringopsrv {
    rpc StringOpDo(StringOP) returns (DefaultResp) {}
}
